<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.WorkoutEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/et_workout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:hint="@string/workout_name_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_workout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="none"
            android:hint="@string/short_description_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_calories_per_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="none"
            android:hint="@string/calories_per_set"
            android:inputType="number" />

        <EditText
            android:id="@+id/et_sets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="none"
            android:hint="@string/sets"
            android:inputType="number" />

        <EditText
            android:id="@+id/et_reps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="none"
            android:hint="@string/reps"
            android:inputType="number" />

        <EditText
            android:id="@+id/et_rest_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="none"
            android:hint="@string/rest_time_minutes"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/target_audience_label" />

        <RadioGroup
            android:id="@+id/rg_target_audience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_underweight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/underweight" />

            <RadioButton
                android:id="@+id/rb_normal_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal_weight" />

            <RadioButton
                android:id="@+id/rb_overweight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overweight" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_update_workout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/update_workout_button" />

    </LinearLayout>
</ScrollView>
