<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".screens.AdminActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:text="@string/admin_control_panel"
        android:textColor="#2196F3"
        android:textSize="26sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_add_workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@android:drawable/ic_menu_add"
            android:drawablePadding="15dp"
            app:drawableTint="#2196F3"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:text="@string/add_new_workout_system"
            android:textColor="#2196F3"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_manage_workouts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@android:drawable/ic_menu_edit"
            android:drawablePadding="15dp"
            app:drawableTint="#2196F3"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:text="@string/manage_edit_workouts"
            android:textColor="#2196F3"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_manage_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@android:drawable/ic_menu_myplaces"
            android:drawablePadding="15dp"
            app:drawableTint="#2196F3"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:text="@string/manage_users"
            android:textColor="#2196F3"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_manage_recipes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@android:drawable/ic_menu_delete"
            android:drawablePadding="15dp"
            app:drawableTint="#2196F3"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:text="@string/manage_delete_recipes"
            android:textColor="#2196F3"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

</LinearLayout>
